@@ -30,6 +30,7 @@ object BigProjectBuild extends Build {
       name := "sbt-big-project",
       ScalariformKeys.preferences := FormattingPreferences().setPreference(AlignSingleLineCaseStatements, true),
       scriptedLaunchOpts := Seq(
+        "-XX:MaxPermSize=256m", "-Xss2m", "-Xmx512m",
         "-Dplugin.version=" + version.value,
         // must be downloaded separately, until I can work out the sbt magic
         "-javaagent:" + (baseDirectory.value / "class-monkey-1.7.0-SNAPSHOT-assembly.jar")
